@@ -59,6 +59,7 @@ systemd System and Service Manager
  	- remove sd_bus_message_append_string_iovec function;
  	- remove sd_bus_message_append_string_space function;
  	- remove sd_bus_message_append_string_memfd function;
+ 	- remove sd-memfd module;
  * initctl:
  	- don't hide error code;
  * logind:
